--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,19 @@
-parseHost
+Done :
+server_socket
+Server name
+ports
+methods
+MaxBodySize
+root_directory
+error_pages
+page_directory
 
-multi.conf error_page parselamiyo
+
+to be done:
+Trie ??
+post_directory
+routing_table
+redirection_table
+
+
 
