--- a/todo.txt
+++ b/todo.txt
@@ -1,27 +1,22 @@
-Done :
-server_socket
-Server name
-ports
-methods
-MaxBodySize
-root_directory
-error_pages
-page_directory
-Trie ??
-post_directory
-routing_table
-redirection_table
-400
+DONE:
 404
 403
 200
 201
 405
+413
+501
+
 to be done:
 
-413
-500
-501
+400 Bad request {
+	GETTT /index.html HTTP/1.1
+	Host: localhost
+	GET /index.html HTTP/9.9
+	Host: localhost
+}
+
+
 DELETE
 POLLOUT
 
